--- a/delice.html
+++ b/delice.html
@@ -29,32 +29,44 @@
             <p class="titre_plat">ENTREES</p>
             <div class="trait_entrees"></div>
             <div class="carte">
-                <h3>Tartare de thon</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Tartare de thon</h3>
                     <p>Assaisonné au yuzu</p>
-                    <p><strong>25€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
-                        </div>
                 </div>
-            </div>
-            <div class="carte">
-                <h3>Bouchée de homard croustillant</h3>
-                <div class="carte__prix">
-                    <p>Et sa farandole de petits légumes</p>
-                    <p><strong>35€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
-                        </div>
-                </div>
-            </div>
-            <div class="carte">
-                <h3>Velouté de cèpes</h3>
-                <div class="carte__prix">
-                    <p>Aux truffes</p>
-                    <p><strong>20€</strong></p>
+                <div class="carte__prix">                    
+                    <p class="price">25€</p>
                     <div class="animation_check">
-                        <i class="fa-solid fa-circle-check fa-xl"></i>
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carte">
+                <div class="carte__texte">
+                    <h3>Bouchée de homard croustillant</h3>
+                    <p>Et sa farandole de petits légumes</p>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">35€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carte">
+                <div class="carte__texte">
+                    <h3>Velouté de cèpes</h3>
+                    <p>Aux truffes</p>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">20€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -63,33 +75,45 @@
             <p class="titre_plat">PLATS</p>
             <div class="trait_plats"></div>
             <div class="carte">
-                <h3>Poulet rôti aux herbes de provence</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Poulet rôti aux herbes de provence</h3>
                     <p>Et sa crème de truffe</p>
-                    <p><strong>40€</strong></p>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">40€</p>
                     <div class="animation_check">
-                        <i class="fa-solid fa-circle-check fa-xl"></i>
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Langouste rôtie</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Langouste rôtie</h3>
                     <p>Et ses légumes de saison</p>
-                    <p><strong>44€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">35€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Côte de boeuf angus</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Côte de boeuf angus</h3>
                     <p>Et sa purée de panais</p>
-                    <p><strong>44€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">44€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -97,33 +121,45 @@
             <p class="titre_plat">DESSERTS</p>
             <div class="trait_desserts"></div>
             <div class="carte">
-                <h3>Farandole de desserts</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Farandole de desserts</h3>
                     <p>Du chef</p>
-                    <p><strong>18€</strong></p>
-                    <div class="animation_check">
-                        <i class="fa-solid fa-circle-check fa-xl"></i>
-                    </div>
                 </div>
-            </div>
-            <div class="carte">
-                <h3>Crème brulée</h3>
-                <div class="carte__prix">
-                    <p>Revisitée</p>
-                    <p><strong>22€</strong></p>
+                <div class="carte__prix">                    
+                    <p class="price">18€</p>
                     <div class="animation_check">
-                        <i class="fa-solid fa-circle-check fa-xl"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="carte">
-                <h3>Tiramisu</h3>
-                <div class="carte__prix">
-                    <p>A la noisette</p>
-                    <p><strong>23€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carte">
+                <div class="carte__texte">
+                    <h3>Crème brulée</h3>
+                    <p>Revisitée</p>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">22€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carte">
+                <div class="carte__texte">
+                    <h3>Tiramisu</h3>
+                    <p>A la noisette</p>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">23€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -135,10 +171,10 @@
 
     <footer>
         <h3>ohmyfood</h3>
-        <a><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
-        <a><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
-        <a><strong>Mentions légales</strong></a>
-        <a><strong>Contact</strong></a>
+        <a href="#"><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
+        <a href="#"><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
+        <a href="#"><strong>Mentions légales</strong></a>
+        <a href="#"><strong>Contact</strong></a>
     </footer>
 
 </body>
