--- a/enchante.html
+++ b/enchante.html
@@ -29,43 +29,59 @@
             <p class="titre_plat">ENTREES</p>
             <div class="trait_entrees"></div>
             <div class="carte">
-                <h3>Ravioles de foie gras</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Ravioles de foie gras</h3>
                     <p>Accompagnés de leur crème à la truffe</p>
-                    <p><strong>25€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">25€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Caviar osciètre</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Caviar osciètre</h3>
                     <p>Sur blini à la farine de blé noir</p>
-                    <p><strong>35€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">35€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Homard et espuma de ...</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Homard et espuma de ...</h3>
                     <p>Mariné aux zests d'orange</p>
-                    <p><strong>20€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">20€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Foie gras de canard cuit entier</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Foie gras de canard cuit entier</h3>
                     <p>Confiture de figue et pain toasté</p>
-                    <p><strong>35€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">35€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -73,33 +89,45 @@
             <p class="titre_plat">PLATS</p>
             <div class="trait_plats"></div>
             <div class="carte">
-                <h3>Noix de coquilles Saint-Jacques</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Noix de coquilles Saint-Jacques</h3>
                     <p>Sur lit de purée de céleri-rave</p>
-                    <p><strong>40€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
-                        </div>
                 </div>
-            </div>
-            <div class="carte">
-                <h3>Langoustine poêlée</h3>
-                <div class="carte__prix">
-                    <p>Purée de patate douce</p>
-                    <p><strong>35€</strong></p>
+                <div class="carte__prix">                    
+                    <p class="price">40€</p>
                     <div class="animation_check">
-                        <i class="fa-solid fa-circle-check fa-xl"></i>
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Mijoté de queue de boeuf</h3>
-                <div class="carte__prix">
-                    <p>Et riz sauvage aux zests de citron</p>
-                    <p><strong>44€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                <div class="carte__texte">
+                    <h3>Langoustine poêlée</h3>
+                    <p>Purée de patate douce</p>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">35€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carte">
+                <div class="carte__texte">
+                    <h3>Mijoté de queue de boeuf</h3>
+                    <p>Et riz sauvage aux zests de citron</p>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">44€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -107,33 +135,45 @@
             <p class="titre_plat">DESSERTS</p>
             <div class="trait_desserts"></div>
             <div class="carte">
-                <h3>Macaron noisette et chocolat</h3>
-                <div class="carte__prix">
-                    <p>Glace au caramel brun et sel Guérande</p>
-                    <p><strong>18€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                <div class="carte__texte">
+                    <h3>Macaron noisette et chocolat</h3>
+                    <p>Glace au caramel crun et sel de Guérande</p>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">18€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Baba au rhum revisité</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Baba au rhum revisité</h3>
                     <p>Avec son coulis de citron</p>
-                    <p><strong>22€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">22€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Tarte au citron meringuée</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Tarte au citron meringuée</h3>
                     <p>Destructurée</p>
-                    <p><strong>23€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">23€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -145,10 +185,10 @@
 
     <footer>
         <h3>ohmyfood</h3>
-        <a><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
-        <a><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
-        <a><strong>Mentions légales</strong></a>
-        <a><strong>Contact</strong></a>
+        <a href="#"><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
+        <a href="#"><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
+        <a href="#"><strong>Mentions légales</strong></a>
+        <a href="#"><strong>Contact</strong></a>
     </footer>
 
 </body>
