--- a/francaise.html
+++ b/francaise.html
@@ -14,6 +14,8 @@
 </head>
 <body>
 
+    <div class="spinner"></div>
+
     <header class="h_restaurants">
         <a class="h_restaurants__fleche" href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1 class="h_restaurants__titre">ohmyfood</h1>
@@ -30,33 +32,45 @@
             <p class="titre_plat">ENTREES</p>
             <div class="trait_entrees"></div>
             <div class="carte">
-                <h3>Tartare de poulpe acidulé</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Tartare de poulpe acidulé</h3>                
                     <p>Aux zests d'orange</p>
-                    <p><strong>25€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
-                        </div>
                 </div>
+                <div class="carte__prix">
+                    <p class="price">25€</p>
+                    <div class="animation_check">
+                         <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>                                                
+                        </div>
+                    </div>
+                </div>    
             </div>
             <div class="carte">
-                <h3>Velouté de légumes d'antan</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Velouté de légumes d'antan</h3>
                     <p>Carotte, panais, topinambour</p>
-                    <p><strong>35€</strong></p>
+                </div>
+                <div class="carte__prix">                  
+                    <p class="price">35€</p>
                     <div class="animation_check">
-                        <i class="fa-solid fa-circle-check fa-xl"></i>
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Soupe à l'oignon</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Soupe à l'oignon</h3>
                     <p>Revisitée</p>
-                    <p><strong>20€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">20€</p>
+                     <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,33 +78,45 @@
             <p class="titre_plat">PLATS</p>
             <div class="trait_plats"></div>
             <div class="carte">
-                <h3>Coquilles Saint-Jacques</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Coquilles Saint-Jacques</h3>
                     <p>Accompagnées d'une purée de panais</p>
-                    <p><strong>40€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">40€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Magret de canard</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Magret de canard</h3>
                     <p>Et parmentier de pommes de terres</p>
-                    <p><strong>35€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">35€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Pigeonneau d'Ille-et-Vilaire</h3>
                     <p>Sur son lit de gnocchis aux légumes</p>
-                    <p><strong>44€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">44€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -98,33 +124,45 @@
             <p class="titre_plat">DESSERTS</p>
             <div class="trait_desserts"></div>
             <div class="carte">
-                <h3>Pétales de violettes glacés</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Pétales de violettes glacés</h3>
                     <p>Et purée de noisettes</p>
-                    <p><strong>18€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">18€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Fondant au chocolat</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Fondant au chocolat</h3>
                     <p>Revisité</p>
-                    <p><strong>22€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">22€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="carte">
-                <h3>Millefeuille croustillant</h3>
-                <div class="carte__prix">
+                <div class="carte__texte">
+                    <h3>Millefeuille croustillant</h3>
                     <p>Myrtilles et pâte d'amande</p>
-                    <p><strong>23€</strong></p>
-                             <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                </div>
+                <div class="carte__prix">                    
+                    <p class="price">23€</p>
+                    <div class="animation_check">
+                        <div class="i_check">
+                            <i class="fas fa-check-circle" aria-hidden="true"></i>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -136,10 +174,10 @@
 
     <footer>
         <h3>ohmyfood</h3>
-        <a><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
-        <a><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
-        <a><strong>Mentions légales</strong></a>
-        <a><strong>Contact</strong></a>
+        <a href="#"><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
+        <a href="#"><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
+        <a href="#"><strong>Mentions légales</strong></a>
+        <a href="#"><strong>Contact</strong></a>
     </footer>
 </body>
 </html>
