--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <title>Projet 3</title>
 </head>
 <body>
+
+    <div class="loader"><div class="spin"></div></div>
     <header class="h">
         <h1>ohmyfood</h1>
         <div class="h__localisation">
@@ -63,8 +65,8 @@
                             <p>Ménilmontant</p>
                         </div>
                         <div class="heart">
-                            <i class="fa fa-heart-o fa_xl jauge"></i>
-                            <i class="fa fa-heart fa-xl jauge_remplissage"></i>                             
+                            <i class="fa fa-heart-o jauge"></i>
+                            <i class="fa fa-heart jauge_remplissage"></i>                             
                         </div>                      
                     </div>
                     </a>
@@ -77,19 +79,25 @@
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
                         </div>
-                        <i class="fa-regular fa-heart fa-xl"></i>
+                        <div class="heart">
+                            <i class="fa fa-heart-o jauge"></i>
+                            <i class="fa fa-heart jauge_remplissage"></i>                             
+                        </div> 
                     </div>
                     </a>
                 </div>
                 <div class="restaurants__carte">
                     <a href="francaise.html">
-                        <img class="restaurants__img" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                        <img class="restaurants__img img_francaise " src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                     <div class="restaurants__carte__bas">
                         <div class="restaurants__nom">
                             <h3>A la française</h3>
                             <p>Cité Rouge</p>
                         </div>
-                        <i class="fa-regular fa-heart fa-xl"></i>
+                        <div class="heart">
+                            <i class="fa fa-heart-o jauge"></i>
+                            <i class="fa fa-heart jauge_remplissage"></i>                             
+                        </div> 
                     </div>
                     </a>
                 </div>
@@ -101,7 +109,10 @@
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
                         </div>
-                        <i class="fa-regular fa-heart fa-xl"></i>                        
+                        <div class="heart">
+                            <i class="fa fa-heart-o jauge"></i>
+                            <i class="fa fa-heart jauge_remplissage"></i>                             
+                        </div>                        
                     </div>
                     </a>
                 </div>
@@ -111,10 +122,10 @@
 
     <footer>
         <h3>ohmyfood</h3>
-        <a><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
-        <a><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
-        <a><strong>Mentions légales</strong></a>
-        <a><strong>Contact</strong></a>
+        <a href="#"><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
+        <a href="#"><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
+        <a href="#"><strong>Mentions légales</strong></a>
+        <a href="#"><strong>Contact</strong></a>
     </footer>
     
 </body>
