--- a/palette.html
+++ b/palette.html
@@ -29,32 +29,44 @@
                 <p class="titre_plat">ENTREES</p>
                 <div class="trait_entrees"></div>
                 <div class="carte">
-                    <h3>Fricassée d'escargot</h3>
-                    <div class="carte__prix">
+                    <div class="carte__texte">
+                        <h3>Fricassée d'escargot</h3>
                         <p>Au piment d'espelette</p>
-                        <p><strong>25€</strong></p>
+                    </div>
+                    <div class="carte__prix">                    
+                        <p class="price">25€</p>
                         <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                            <div class="i_check">
+                                <i class="fas fa-check-circle" aria-hidden="true"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="carte">
-                    <h3>Foie gras de canard mi-cuit</h3>
-                    <div class="carte__prix">
-                        <p>Et ses copeaux de truffe noire</p>
-                        <p><strong>35€</strong></p>
+                    <div class="carte__texte">
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <p>Et ses copeauc de truffe noire</p>
+                    </div>
+                    <div class="carte__prix">                    
+                        <p class="price">35€</p>
                         <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                            <div class="i_check">
+                                <i class="fas fa-check-circle" aria-hidden="true"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="carte">
-                    <h3>Oeuf au plat</h3>
-                    <div class="carte__prix">
-                        <p>Assaisonné à la truffe sur lit de ..</p>
-                        <p><strong>20€</strong></p>
+                    <div class="carte__texte">
+                        <h3>Oeuf au plat</h3>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                    </div>
+                    <div class="carte__prix">                    
+                        <p class="price">20€</p>
                         <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                            <div class="i_check">
+                                <i class="fas fa-check-circle" aria-hidden="true"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -63,32 +75,44 @@
                 <p class="titre_plat">PLATS</p>
                 <div class="trait_plats"></div>
                 <div class="carte">
-                    <h3>Filet de boeuf aux herbes</h3>
-                    <div class="carte__prix">
-                        <p>Accompagné de sa ribambelle de légu...</p>
-                        <p><strong>40€</strong></p>
+                    <div class="carte__texte">
+                        <h3>Filet de boeuf aux herbes</h3>
+                        <p>Accompagné de sa ribambelle de légumes</p>
+                    </div>
+                    <div class="carte__prix">                    
+                        <p class="price">40€</p>
                         <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                            <div class="i_check">
+                                <i class="fas fa-check-circle" aria-hidden="true"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="carte">
-                    <h3>Parmentier de queue de boeuf</h3>
-                    <div class="carte__prix">
+                    <div class="carte__texte">
+                        <h3>Parmentier de queue de boeuf </h3>
                         <p>A la truffe noire sur sa purée de panais</p>
-                        <p><strong>35€</strong></p>
+                    </div>
+                    <div class="carte__prix">                    
+                        <p class="price">35€</p>
                         <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                            <div class="i_check">
+                                <i class="fas fa-check-circle" aria-hidden="true"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="carte">
-                    <h3>Filet de Turbot</h3>
-                    <div class="carte__prix">
+                    <div class="carte__texte">
+                        <h3>Filet de Turbot</h3>
                         <p>Aux agrumes</p>
-                        <p><strong>44€</strong></p>
+                    </div>
+                    <div class="carte__prix">                    
+                        <p class="price">44€</p>
                         <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                            <div class="i_check">
+                                <i class="fas fa-check-circle" aria-hidden="true"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -97,32 +121,44 @@
                 <p class="titre_plat">DESSERTS</p>
                 <div class="trait_desserts"></div>
                 <div class="carte">
-                    <h3>Paris-Brest</h3>
-                    <div class="carte__prix">
+                    <div class="carte__texte">
+                        <h3>Paris-Brest</h3>
                         <p>Revisité</p>
-                        <p><strong>18€</strong></p>
+                    </div>
+                    <div class="carte__prix">                    
+                        <p class="price">18€</p>
                         <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                            <div class="i_check">
+                                <i class="fas fa-check-circle" aria-hidden="true"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="carte">
-                    <h3>Macaron au chocolat d'exception</h3>
-                    <div class="carte__prix">
+                    <div class="carte__texte">
+                        <h3>Macaron au chocolat d'exception</h3>
                         <p>Et glace à la vanille de Madagascar</p>
-                        <p><strong>22€</strong></p>
+                    </div>
+                    <div class="carte__prix">                    
+                        <p class="price">22€</p>
                         <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                            <div class="i_check">
+                                <i class="fas fa-check-circle" aria-hidden="true"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="carte">
-                    <h3>Mousse au chocolat</h3>
-                    <div class="carte__prix">
+                    <div class="carte__texte">
+                        <h3>Mousse au chocolat</h3>
                         <p>Au piment d'espelette et à la truffe noire</p>
-                        <p><strong>23€</strong></p>
+                    </div>
+                    <div class="carte__prix">                    
+                        <p class="price">23€</p>
                         <div class="animation_check">
-                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                            <div class="i_check">
+                                <i class="fas fa-check-circle" aria-hidden="true"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -135,10 +171,10 @@
 
     <footer>
         <h3>ohmyfood</h3>
-        <a><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
-        <a><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
-        <a><strong>Mentions légales</strong></a>
-        <a><strong>Contact</strong></a>
+        <a href="#"><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
+        <a href="#"><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
+        <a href="#"><strong>Mentions légales</strong></a>
+        <a href="#"><strong>Contact</strong></a>
     </footer>
 </body>
 </html>
