--- a/delice.html
+++ b/delice.html
@@ -19,12 +19,12 @@
         <h1 class="h_restaurants__titre">ohmyfood</h1>
     </header>
 
-    <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="bg_image" alt="">
+    <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="bg_image" alt="image plat restaurant le délice des sens">
     <section class="delice">
-        <div class="titre">
+        <article class="titre">
             <h1>Le délice des sens</h1>
             <i class="fa-regular fa-heart fa-xl"></i>
-        </div>
+        </article>
         <div class="entrees">
             <p class="titre_plat">ENTREES</p>
             <div class="trait_entrees"></div>
