--- a/francaise.html
+++ b/francaise.html
@@ -22,7 +22,7 @@
     </header>
 
 
-    <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="bg_image" alt="">
+    <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="bg_image" alt="image plat restaurant A la française">
     <section class="francaise">
         <div class="titre">
             <h1>A la française</h1>
