--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
   
 
     <main>
-        <div class="recherche_restaurant">
-            <h3>Réservez le menu qui vous convient</h3>
-            <p>Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
+        <article class="recherche_restaurant">
+            <h3 class="reservez">Réservez le menu qui</h3>
+            <h3 class="p_deux_recherche"> vous convient</h3>
+            <p>Découvrez des restaurants d'exception,</p>
+            <p> selectionnés par nos soins.</p>
             <input type="button" value="Explorer nos restaurants">
-        </div>
+        </article>
 
-        <div class="fonctionnement">
+        <section class="fonctionnement">
             <h1>Fonctionnement</h1>
             <div class="fonctionnement__flex">
                 <a class="fonctionnement__carte">
@@ -51,14 +53,14 @@
                     <h4>Dégustez au restaurant</h4>
                 </a>
             </div>
-        </div>
+        </section>
 
         <section class="restaurants">
             <h1>Restaurants</h1>
             <div class="restaurants__flex">
                 <div class="restaurants__carte nouveau">
                     <a href="palette.html">
-                        <img class="restaurants__img" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                        <img class="restaurants__img" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image plat restaurant La palette du goût">
                     <div class="restaurants__carte__bas">
                         <div class="restaurants__nom">
                             <h3>La palette du goût</h3>
@@ -73,7 +75,7 @@
                 </div>
                 <div class="restaurants__carte nouveau">
                     <a href="enchante.html">
-                        <img class="restaurants__img"  src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                        <img class="restaurants__img"  src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image plat restaurant La note enchantée">
                     <div class="restaurants__carte__bas">
                         <div class="restaurants__nom">
                             <h3>La note enchantée</h3>
@@ -88,7 +90,7 @@
                 </div>
                 <div class="restaurants__carte">
                     <a href="francaise.html">
-                        <img class="restaurants__img img_francaise " src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                        <img class="restaurants__img img_francaise " src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image plat restaurant A la française">
                     <div class="restaurants__carte__bas">
                         <div class="restaurants__nom">
                             <h3>A la française</h3>
@@ -103,7 +105,7 @@
                 </div>
                 <div class="restaurants__carte">
                     <a href="delice.html">
-                        <img class="restaurants__img" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                        <img class="restaurants__img" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image plat restaurant LE délice des sens">
                     <div class="restaurants__carte__bas">
                         <div class="restaurants__nom">
                             <h3>Le délice des sens</h3>
