--- a/palette.html
+++ b/palette.html
@@ -19,7 +19,7 @@
         <h1 class="h_restaurants__titre">ohmyfood</h1>
     </header>
 
-    <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="bg_image" alt="">
+    <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="bg_image" alt="image plat restaurant la palette du goût">
     <section class="palette">
         <div class="titre">
             <h1>La palette du goût</h1>
