--- a/enchante.html
+++ b/enchante.html
@@ -19,7 +19,7 @@
         <h1 class="h_restaurants__titre">ohmyfood</h1>
     </header>
 
-    <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" class="bg_image img_enchante" alt="">
+    <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" class="bg_image img_enchante" alt="image plat restaurant la note enchantée">
     <section class="enchante">
         <div class="titre">
             <h1>La note enchantée</h1>
