--- a/palette.html
+++ b/palette.html
@@ -23,7 +23,10 @@
     <section class="palette">
         <div class="titre">
             <h1>La palette du goût</h1>
-            <i class="fa-regular fa-heart fa-xl"></i>
+            <div class="heart">
+                <i class="fa fa-heart-o jauge"></i>
+                <i class="fa fa-heart jauge_remplissage"></i>                             
+            </div>                 
         </div>
             <div class="entrees">
                 <p class="titre_plat">ENTREES</p>
