--- a/francaise.html
+++ b/francaise.html
@@ -26,7 +26,10 @@
     <section class="francaise">
         <div class="titre">
             <h1>A la française</h1>
-            <i class="fa-regular fa-heart fa-xl"></i>
+            <div class="heart">
+                <i class="fa fa-heart-o jauge"></i>
+                <i class="fa fa-heart jauge_remplissage"></i>                             
+            </div> 
         </div>
         <div class="entrees">
             <p class="titre_plat">ENTREES</p>
