--- a/delice.html
+++ b/delice.html
@@ -23,7 +23,10 @@
     <section class="delice">
         <article class="titre">
             <h1>Le délice des sens</h1>
-            <i class="fa-regular fa-heart fa-xl"></i>
+            <div class="heart">
+                <i class="fa fa-heart-o jauge"></i>
+                <i class="fa fa-heart jauge_remplissage"></i>                             
+            </div> 
         </article>
         <div class="entrees">
             <p class="titre_plat">ENTREES</p>
